@@ -46,7 +46,6 @@
 
 #include <libgnome/Gnome.h>
 #include <libgnome/gnome-selector.h>
-#include <libgnome/gnome-file-selector.h>
 
 #include <libgnome/libgnome-init.h>
 
